--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -2,8 +2,8 @@
 main:
   # - title: "Quick-Start Guide"
   #   url: https://mmistakes.github.io/minimal-mistakes/docs/quick-start-guide/
-  - title: "About"
-    url: /About/
+  - title: "Posts"
+    url: /_layouts/posts.html
   # - title: "Sample Posts"
   #   url: /year-archive/
   # - title: "Sample Collections"
