--- a/_config.yml
+++ b/_config.yml
@@ -101,7 +101,7 @@ analytics:
 
 
 # Site Author
-author:
+author: Eddie Lee
   name             : "Eddie Lee"
   avatar           : "/assets/images/bio-photo.jpg" # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
   bio              : "I am an engineer who has a dream."
