--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -3,7 +3,7 @@ main:
   # - title: "Quick-Start Guide"
   #   url: https://mmistakes.github.io/minimal-mistakes/docs/quick-start-guide/
   - title: "Posts"
-    url: /_layouts/posts.html
+    url: /_posts/
   # - title: "Sample Posts"
   #   url: /year-archive/
   # - title: "Sample Collections"
