--- a/_config.yml
+++ b/_config.yml
@@ -152,9 +152,10 @@ author: Eddie Lee
 
 # Reading Files
 include:
-#   - .htaccess
-#   - _pages
-  ["_pages"]
+  - .htaccess
+  - _pages
+  - _posts
+#   ["_pages"]
 exclude:
   - "*.sublime-project"
   - "*.sublime-workspace"
