--- a/_config.yml
+++ b/_config.yml
@@ -136,12 +136,12 @@ footer:
 #     - label: "Facebook"
 #       icon: "fab fa-fw fa-facebook-square"
 #       url:
-#     - label: "GitHub"
-#       icon: "fab fa-fw fa-github"
-#       url:
-    - label: "GitLab"
-      icon:  "fab fa-fw fa-gitlab"
-      url:   "https://github.com/taewanlee/"
+    - label:  "GitHub"
+      icon:   "fab fa-fw fa-github"
+      url:    "https://github.com/taewanlee/"
+#     - label: "GitLab"
+#       icon:  "fab fa-fw fa-gitlab"
+#       url:   
 #     - label: "Bitbucket"
 #       icon: "fab fa-fw fa-bitbucket"
 #       url:
