--- a/_config.yml
+++ b/_config.yml
@@ -123,6 +123,9 @@ author:
     - label:  "GitHub"
       icon:   "fab fa-fw fa-github"
       url:    "https://github.com/taewanlee/"
+    - label:  "LinkedIn"
+      icon:   "fab fa-fw fa-linkedin"
+      url:    "https://www.linkedin.com/in/taewanlee/"
 #     - label:  "Instagram"
 #       icon:   "fab fa-fw fa-instagram"
 #       url:    "https://instagram.com/"
@@ -139,6 +142,9 @@ footer:
     - label:  "GitHub"
       icon:   "fab fa-fw fa-github"
       url:    "https://github.com/taewanlee/"
+    - label:  "LinkedIn"
+      icon:   "fab fa-fw fa-linkedin"
+      url:    "https://www.linkedin.com/in/taewanlee/"
 #     - label: "GitLab"
 #       icon:  "fab fa-fw fa-gitlab"
 #       url:   
