--- a/_config.yml
+++ b/_config.yml
@@ -94,7 +94,7 @@ social:
 
 # Analytics
 analytics:
-  provider               : "google-gtag" false # false (default), "google", "google-universal", "google-gtag", "custom"
+  provider               : "google-gtag" # false (default), "google", "google-universal", "google-gtag", "custom"
   google:
     tracking_id          : "G-HS0Y1E83L4"
     anonymize_ip         : # true, false (default)
