--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -4,8 +4,8 @@ main:
   #   url: https://mmistakes.github.io/minimal-mistakes/docs/quick-start-guide/
   - title: "Home"
     url: https://taewanlee.github.io/
-  - title: "About"
-    url: /about/
+  # - title: "About"
+  #   url: /about/
   - title: "All Posts"
     url: /categories/
   # - title: "Sample Posts"
